# TrivialCompiler

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .gitmodules-ci  CMakeLists.txt  LICENSE  README.md  extract_result.py  gen.py  initialize_cmake.sh  parser.toml  readme.md  test.sh
.github/workflows/: build_and_test.yml
custom_test/: array.sy  conv1d.in  conv1d.out  conv1d.sy  div_constant.in  div_constant.out  div_constant.sy  early_return_local_init.sy  floyd.in  floyd.out  floyd.sy  fold_counted_div_loop.sy  fold_global_const.out  fold_global_const.sy  go_upstairs.out  go_upstairs.sy  inline_zero_memset.sy  issue4_gvn_loop.sy  local_init.sy  loop_unroll.out  loop_unroll.sy  loop_unroll2.out  loop_unroll2.sy  loop_unroll3.out  loop_unroll3.sy  loop_unroll4.out  loop_unroll4.sy  loop_unroll5.out  loop_unroll5.sy  many_globals.sy  many_globals_params.sy  many_globals_params2.out  many_globals_params2.sy  many_params.sy  median.in  median.out  median.sy  memory_copy.out  memory_copy.sy  mv.in  (+53 more)
src/: ast.cpp  ast.hpp  casting.hpp  codegen.cpp  codegen.hpp  common.cpp  common.hpp  ilist.hpp  ir.cpp  ir.hpp  machine_code.cpp  machine_code.hpp  main.cpp  mem2reg.cpp  mem2reg.hpp  op.hpp  op.inc  parser.cpp  parser.hpp  ssa.cpp  ssa.hpp  typeck.cpp  typeck.hpp
src/conv/: codegen.cpp  codegen.hpp  parser.cpp  parser.hpp  ssa.cpp  ssa.hpp  typeck.cpp  typeck.hpp
src/passes/: asm_simplify.cpp  asm_simplify.hpp  cfg.cpp  cfg.hpp  dce.hpp  fill_pred.cpp  fill_pred.hpp  gvn_gcm.cpp  gvn_gcm.hpp  loop_unroll.cpp  loop_unroll.hpp  mem2reg.cpp  mem2reg.hpp  memdep.cpp  memdep.hpp  pass_manager.cpp  pass_manager.hpp
src/passes/asm/: allocate_register.cpp  allocate_register.hpp  asm_simplify.cpp  asm_simplify.hpp  compute_stack_info.cpp  compute_stack_info.hpp  if_to_cond.cpp  if_to_cond.hpp  scheduling.cpp  scheduling.hpp  simplify_asm.cpp  simplify_asm.hpp
src/passes/ir/: bbopt.cpp  bbopt.hpp  callgraph.cpp  callgraph.hpp  cfg.cpp  cfg.hpp  dce.cpp  dce.hpp  dead_store_elim.cpp  dead_store_elim.hpp  extract_stack_array.cpp  extract_stack_array.hpp  fill_pred.hpp  fold_counted_div_loop.cpp  fold_counted_div_loop.hpp  gvn_gcm.cpp  gvn_gcm.hpp  inline_func.cpp  inline_func.hpp  loop_unroll.cpp  loop_unroll.hpp  mark_global_const.cpp  mark_global_const.hpp  mem2reg.cpp  mem2reg.hpp  memdep.cpp  memdep.hpp  promote_const_local_array.cpp  promote_const_local_array.hpp  promote_loop_store.cpp  promote_loop_store.hpp  remove_dead_local_init.cpp  remove_dead_local_init.hpp  remove_identical_branch.cpp  remove_identical_branch.hpp  remove_unused_function.cpp  remove_unused_function.hpp  remove_useless_loop.cpp  remove_useless_loop.hpp  sink_local_init.cpp  (+9 more)
src/structure/: ast.cpp  ast.hpp  ir.cpp  ir.hpp  machine_code.cpp  machine_code.hpp  op.hpp  op.inc
utils/: CommandGenerator.java  Dockerfile  build_oneliner.sh  extract_result.py  gen_parser.py  initialize_cmake.sh  run_test.sh
